<resources>
    <string name="app_name">Restaurantes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>

    <string name="menu_home">Home</string>
    <string name="menu_burger">Hamburger</string>
    <string name="menu_kebab">Kebab</string>
    <string name="menu_fast_food">Fast food</string>
    <string name="menu_asian">Asian</string>
    <string name="menu_italian">Italian</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_mexican">Mexican</string>
    <string name="menu_pokke">Pokke</string>v
    <string name="menu_logout">Logout</string>
    <string name="menu_aboutus">About us</string>
    <string name="menu_others">Others</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>